# burger_party_rocket

./: .gitignore  Cargo.toml  README.md
public/command_details/: README.txt  details_burgers.json  details_drinks.json
public/css/: main.css  main.css.map
public/js/: _add_product.js  _clock.js  _command.js  _command_details.js  _command_fetch_details.js  _command_payed_and_accepted.js  _modal_payment.js
src/: main.rs
src/controller/: command_controller.rs  commande_controller.rs  cookie_controller.rs  homepage_controller.rs  infos_prod_controller.rs  mod.rs  public_resources_controller.rs
src/cookie_handler/: c_commande.rs  mod.rs
src/data_access/: command_details_handler.rs  dao_boisson.rs  dao_burger.rs  dao_command.rs  dao_commande.rs  dao_drink.rs  dao_factory.rs  dao_ingredient.rs  db_connection.rs  mod.rs
src/entity/: boisson.rs  burger.rs  command.rs  commande.rs  drink.rs  ingredient.rs  mod.rs
src/templates/: index.html  qui_sommes_nous.html
src/types/: db_types.rs
src/validator/: mod.rs
src/validators/: command_validator.rs  commande_validator.rs  cookie_validator.rs  mod.rs
templates/: _base.html.tera  index.html.tera  infos_produits.html.tera  qui_sommes_nous.html  qui_sommes_nous.html.tera  who_are_we.html.tera
templates/command/: _command_new.html.tera  add_product.html.tera  command_details.html.tera  command_payed_and_accepted.html.tera
templates/commande/: _commande_new.html.tera  add_product.html.tera  commande_new.html.tera
templates/infos_products/: details_burgers.html.tera  details_drinks.html.tera  infos_drinks.html.tera  (+2 more)
(+21 files in other folders)
