[package]
name = "burger_party_rocket"
version = "0.1.0"
authors = ["Cyriel Bastin <cyriel.bastin@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
mysql = "18.2.0"
chrono = "0.4.11"
regex = "1.3.7"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]

[development]
template_dir = "./src/templates/"

[production]
template_dir = "./src/templates/"
